[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nativeview"
version = "0.1.0"
description = "Low-level Python ctypes binding to the nativeview public C API (nv.h, nv_hotkey.h, nv_util helpers)"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "nativeview" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["nativeview*"]
